examples/test/testpolicy18526.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18526
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key43: value3
      key12: value20
      key45: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value31
          key10: value21
      podSelector:
        matchLabels:
          key40: value17
          key10: value9
